// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiselect component should be defined and renders correctly (snapshot) 1`] = `
<div>
  <div
    class="form-field form-field--multiselect"
  >
    <div
      class="multiselect"
    >
      <div
        class="chip__wrapper"
      >
        <label
          class=""
        />
        <span
          class="chip__wrapper__clear"
        >
          Clear all
        </span>
      </div>
      <div
        class="multiselect__input__container"
      >
        <div
          class="multiselect__input__container__chips"
        >
          <div
            class="chip chip--deletable chip--small"
          >
            <div
              class="chip__label"
            >
              Blaze 1
            </div>
            <div
              class="chip__icon chip__icon--delete"
            >
              <i
                class="material-icons"
              >
                clear
              </i>
            </div>
          </div>
          <div
            class="chip chip--deletable chip--small"
          >
            <div
              class="chip__label"
            >
              Blaze 2, multi main label
            </div>
            <div
              class="chip__icon chip__icon--delete"
            >
              <i
                class="material-icons"
              >
                clear
              </i>
            </div>
          </div>
          <div
            class="form-field form-field--input  "
          >
            <label
              class=""
              for="input-Choose..."
            />
            <input
              data-testid="input"
              id="input-Choose..."
              placeholder="Choose..."
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Multiselect component should be defined and renders correctly when is opened (snapshot) 1`] = `
<div>
  <div
    class="form-field form-field--multiselect"
  >
    <div
      class="multiselect"
    >
      <div
        class="chip__wrapper"
      >
        <label
          class=""
        />
        <span
          class="chip__wrapper__clear"
        >
          Clear all
        </span>
      </div>
      <div
        class="multiselect__input__container"
      >
        <div
          class="multiselect__input__container__chips"
        >
          <div
            class="chip chip--deletable chip--small"
          >
            <div
              class="chip__label"
            >
              Blaze 1
            </div>
            <div
              class="chip__icon chip__icon--delete"
            >
              <i
                class="material-icons"
              >
                clear
              </i>
            </div>
          </div>
          <div
            class="chip chip--deletable chip--small"
          >
            <div
              class="chip__label"
            >
              Blaze 2, multi main label
            </div>
            <div
              class="chip__icon chip__icon--delete"
            >
              <i
                class="material-icons"
              >
                clear
              </i>
            </div>
          </div>
          <div
            class="form-field form-field--input  "
          >
            <label
              class=""
              for="input-Choose..."
            />
            <input
              data-testid="input"
              id="input-Choose..."
              placeholder="Choose..."
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="multiselect__dropdown"
      >
        <div>
          <div
            style="overflow: auto; will-change: transform; height: 245px; width: 100%;"
          >
            <div
              style="position: relative; width: 100%; min-height: 100%; height: 135px;"
            >
              <div
                style="position: absolute; top: 0px; left: 0px; width: 100%; height: 45px;"
              >
                <div
                  class="form-field form-field--checkbox"
                  role="button"
                >
                  <input
                    checked=""
                    class="form-checkbox"
                    data-cy="multiselect-checkbox-cy-0"
                    data-testid="1-checkbox"
                    description="Lorem ipsum dolor."
                    id="1-checkbox"
                    index="0"
                    name="Blaze 1"
                    readonly=""
                    testid="checkbox-0"
                    type="checkbox"
                    value=""
                  />
                  <div
                    class="form-field--checkbox-full"
                    data-testid="form-field-wrapper"
                  >
                    <label
                      for="1-checkbox"
                    >
                      <span>
                        Blaze 1
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                style="position: absolute; top: 45px; left: 0px; width: 100%; height: 45px;"
              >
                <div
                  class="form-field form-field--checkbox"
                  role="button"
                >
                  <input
                    checked=""
                    class="form-checkbox"
                    data-cy="multiselect-checkbox-cy-1"
                    data-testid="2-checkbox"
                    description="Lorem ipsum dolor."
                    id="2-checkbox"
                    index="1"
                    name="Blaze 2,multi main label,Sub label 1,sub label 2,sub label 3"
                    readonly=""
                    testid="checkbox-1"
                    type="checkbox"
                    value=""
                  />
                  <div
                    class="form-field--checkbox-full"
                    data-testid="form-field-wrapper"
                  >
                    <label
                      for="2-checkbox"
                    >
                      <span>
                        Blaze 2, multi main label
                      </span>
                      <span>
                        Sub label 1, sub label 2, sub label 3
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                style="position: absolute; top: 90px; left: 0px; width: 100%; height: 45px;"
              >
                <div
                  class="form-field form-field--checkbox"
                  role="button"
                >
                  <input
                    class="form-checkbox"
                    data-cy="multiselect-checkbox-cy-2"
                    data-testid="3-checkbox"
                    description="Lorem ipsum dolor."
                    id="3-checkbox"
                    index="2"
                    name="Blaze 3,Sub label 1,sub label 2"
                    readonly=""
                    testid="checkbox-2"
                    type="checkbox"
                    value=""
                  />
                  <div
                    class="form-field--checkbox-full"
                    data-testid="form-field-wrapper"
                  >
                    <label
                      for="3-checkbox"
                    >
                      <span>
                        Blaze 3
                      </span>
                      <span>
                        Sub label 1, sub label 2
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
